--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
-    <script src="./src/app.js"></script>
+    <!-- React package -->
+    <script crossorigin src="https://unpkg.com/react@15/dist/react.js"></script>
+    <!-- React Dom package -->
+    <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+    <!-- <script src="./src/app.js"></script> -->
+    <!-- React -->
+    <script src="./src/index.js"></script>
 </head>
 <body>
-    
+    <!-- React root -->
+    <div id="root"></div>
 </body>
 </html>
