--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
     <!-- <script src="./src/app.js"></script> -->
     <!-- React -->
-    <script src="./src/index.js"></script>
+    <!-- <script src="./src/index.js"></script> -->
+    
+    <!-- compiled -->
+    <script src="./lib/index.js"></script>
 </head>
 <body>
     <!-- React root -->
